@@ -31,7 +31,7 @@ clean:
 
 # Must run as root, so is not run as part of regular build.
 build-images:
-	$(MAKE) -C build all_build stats \
+	$(MAKE) -C build all_build stats release \
 		SUITE=$(SUITE) BUILD_DATE=$(DATE) PRESEED=
 	
 build: build-stamp
@@ -60,9 +60,6 @@ install: build
 
 	install -d $(IMAGEDIR)
 	cp -a build/dest/* $(IMAGEDIR)
-	egrep '^[[:space:]]' $(IMAGEDIR)/MANIFEST.udebs | \
-		sed 's/^[[:space:]]*//' | sort | uniq > $(IMAGEDIR)/udeb.list
-	cd $(IMAGEDIR) && md5sum `find . -type f` > MD5SUMS
 	ln -s $(DATE) $(ARCHIVEDIR)/current
 
 binary-arch: install  
